--- a/cursos.html
+++ b/cursos.html
@@ -19,7 +19,7 @@
     <!--Barra de Navegacion-->
     <div class="w3-row br1">
         <div class="w3-col s12 m12 l3 ">
-             <a href="index.html"><img src="Recursos/iconologo.png" alt="logo" class="w3-left icono"></a>
+            <a href="index.html"><img src="Recursos/iconologo.png" alt="logo" class="w3-left icono"></a>
         </div>
         <div class="w3-col s12 m8 l6">
             <h2 class="tp">El dinero no compra la felicidad, pero el ahorro te da paz y seguridad</h2>
@@ -116,9 +116,17 @@
         </div>
     </div>
     <div class="w3-container">
+        <div class="w3-panel">
+            <div class="w3-light-grey">
+                <div class="w3-container w3-blue" style="width:10%">5%</div>
+            </div>
+        </div>
+
         <a href="#" class="w3-btn w3-round-large w3-right w3-teal w3-margin">Siguiente Video</a>
+        <br>
+
     </div>
-    
+
 
     <!-- /Cuerpo -->
     <br><br><br>
