--- a/recursos.html
+++ b/recursos.html
@@ -47,100 +47,64 @@
     <div class="w3-row-padding">
         <div class="w3-col s6 m4 l3">
             <a href="cursos.html" class="none">
-                <div class="w3-card-4 w3-center none">
-                    <h2>Finanzas</h2>
-                    <img src="Recursos/calculadora.jpg" alt="Finanzas" class="w3-image">
+                <div class="w3-card w3-center none cd">
+                    <h2 class="title-card">Finanzas</h2>
+                    <div class="imgr r1">
+
+                    </div>
                     <div class="w3-container w3-padding-24 w3-justify w3-large">
                         Aprende sobre las finanzas, como gestionar tus ingresos y Gastos
                     </div>
-                    <span class="w3-block w3-center w3-blue w3-xlarge ">
+                    <span class="w3-block w3-center w3-indigo w3-xlarge btn-rd ">
                         Ver Mas</span>
                 </div>
             </a>
+        </div>
+        <div class="w3-col s6 m4 l3">
+            <a href="cursos.html" class="none">
+                <div class="w3-card w3-center none cd">
+                    <h2 class="title-card">Ahorros</h2>
+                    <div class="imgr r2">
 
-            <br>
-           <a href="cursos.html" class="none">
-                <div class="w3-card-4 w3-center none">
-                    <h2>Creditos</h2>
-                    <img src="Recursos/hombrenegocios.jpg" alt="Finanzas" class="w3-image">
+                    </div>
                     <div class="w3-container w3-padding-24 w3-justify w3-large">
                         Aprende sobre las finanzas, como gestionar tus ingresos y Gastos
                     </div>
-                    <a href="cursos.html" class="w3-block w3-center w3-blue w3-xlarge ">
-                        Ver Mas</a>
+                    <span class="w3-block w3-center w3-indigo w3-xlarge btn-rd ">
+                        Ver Mas</span>
+                </div>
+            </a>
+           
+        </div>
+        <div class="w3-col s6 m4 l3">
+            <a href="cursos.html" class="none">
+                <div class="w3-card w3-center none cd">
+                    <h2 class="title-card">Creditos</h2>
+                    <div class="imgr r3">
+
+                    </div>
+                    <div class="w3-container w3-padding-24 w3-justify w3-large">
+                        Aprende sobre las finanzas, como gestionar tus ingresos y Gastos
+                    </div>
+                    <span class="w3-block w3-center w3-indigo w3-xlarge btn-rd ">
+                        Ver Mas</span>
                 </div>
             </a>
         </div>
         <div class="w3-col s6 m4 l3">
             <a href="cursos.html" class="none">
-                <div class="w3-card-4 w3-center none">
-                    <h2>Instituciones Financieras</h2>
-                    <img src="Recursos/laptop.jpg" alt="Finanzas" class="w3-image">
+                <div class="w3-card w3-center none cd">
+                    <h2 class="title-card">Pensiones</h2>
+                    <div class="imgr r4">
+
+                    </div>
                     <div class="w3-container w3-padding-24 w3-justify w3-large">
                         Aprende sobre las finanzas, como gestionar tus ingresos y Gastos
                     </div>
-                    <a href="cursos.html" class="w3-block w3-center w3-blue w3-xlarge ">
-                        Ver Mas</a>
+                    <span class="w3-block w3-center w3-indigo w3-xlarge btn-rd ">
+                        Ver Mas</span>
                 </div>
             </a>
-            <br>
-            <a href="cursos.html" class="none">
-                <div class="w3-card-4 w3-center none">
-                    <h2>Balance General</h2>
-                    <img src="Recursos/grafica.jpg" alt="Finanzas" class="w3-image">
-                    <div class="w3-container w3-padding-24 w3-justify w3-large">
-                        Aprende sobre las finanzas, como gestionar tus ingresos y Gastos
-                    </div>
-                    <a href="cursos.html" class="w3-block w3-center w3-blue w3-xlarge ">
-                        Ver Mas</a>
-                </div>
-            </a>
-        </div>
-        <div class="w3-col s6 m4 l3">
-            <a href="cursos.html" class="none">
-                <div class="w3-card-4 w3-center none">
-                    <h2>Finanzas</h2>
-                    <img src="Recursos/calculadora.jpg" alt="Finanzas" class="w3-image">
-                    <div class="w3-container w3-padding-24 w3-justify w3-large">
-                        Aprende sobre las finanzas, como gestionar tus ingresos y Gastos
-                    </div>
-                    <a href="cursos.html" class="w3-block w3-center w3-blue w3-xlarge ">
-                        Ver Mas</a>
-                </div>
-            </a>
-            <br>
-            <a href="cursos.html" class="none">
-                <div class="w3-card-4 w3-center none">
-                    <h2>Finanzas</h2>
-                    <img src="Recursos/calculadora.jpg" alt="Finanzas" class="w3-image">
-                    <div class="w3-container w3-padding-24 w3-justify w3-large">
-                        Aprende sobre las finanzas, como gestionar tus ingresos y Gastos
-                    </div>
-                    <a href="cursos.html" class="w3-block w3-center w3-blue w3-xlarge ">
-                        Ver Mas</a>
-                </div>
-            </a>
-        </div>
-        <div class="w3-col s6 m4 l3">
-            <div class="w3-card-4 w3-center">
-                <h2>Finanzas</h2>
-                <img src="Recursos/calculadora.jpg" alt="Finanzas" class="w3-image">
-                <div class="w3-container w3-padding-24 w3-justify w3-large">
-                    Aprende sobre las finanzas, como gestionar tus ingresos y Gastos
-                </div>
-                <span class="w3-block w3-center w3-blue w3-xlarge w3-btn">
-                    Ver Mas</span>
-            </div>
-            <br>
-            <div class="w3-card-4 w3-center">
-                <h2>Finanzas</h2>
-                <img src="Recursos/calculadora.jpg" alt="Finanzas" class="w3-image">
-                <div class="w3-container w3-padding-24 w3-justify w3-large">
-                    Aprende sobre las finanzas, como gestionar tus ingresos y Gastos
-                </div>
-                <a href="cursos.html" class="w3-block w3-center w3-blue w3-xlarge w3-btn">
-                    Ver Mas</a>
-            </div>
         </div>
     </div>
 
