--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <link rel="stylesheet" href="Style/cuerpo.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Futuro Seguro</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <link rel="stylesheet" href="Style/Servicios.css">
 </head>
 
 <body>
@@ -27,39 +30,179 @@
         <div class="w3-col s12 m3">
             <a href="" class="w3-button w3-mobile  brnb  w3-hover-border-black">
                 <i class='fas fa-user-alt'></i><br>Iniciar Sesion </a>
-           <!-- <button onclick="myFunction('Recursos')" class="w3-button w3-block w3-center">
+            <!-- <button onclick="myFunction('Recursos')" class="w3-button w3-block w3-center">
                 <i class="w3-xlarge fa fa-bars"></i></button>-->
         </div>
     </div>
 
     <div id="Recursos" class="w3-show">
         <div class="w3-row w3-center">
-            <div class="w3-col m3 n b1"><a href="recursos.html">Recursos</a></div>
-            <div class="w3-col m3 n b2"><a href="simulador.html">Simuladores</a></div>
-            <div class="w3-col m3 n b3"><a href="#">Blog</a></div>
-            <div class="w3-col m3 n b4"><a href="#">Sobre Nosotros</a></div>
+            <div class="w3-col m3 n b1"><a href="recursos.html" class="w3-text-white">Recursos</a></div>
+            <div class="w3-col m3 n b2"><a href="simulador.html" class="w3-text-white">Simuladores</a></div>
+            <div class="w3-col m3 n b3"><a href="Blog.html" class="w3-text-white">Blog</a></div>
+            <div class="w3-col m3 n b4"><a href="nosotros.html" class="w3-text-white">Sobre Nosotros</a></div>
         </div>
     </div>
     <!-- /Barra de Navegacion -->
 
+    <!-- Carrusel -->
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+        <!-- Indicators/dots -->
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        </div>
+
+        <!-- The slideshow/carousel -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="Recursos/laptop.jpg" alt="Los Angeles" class="d-block" style="width:100%">
+            </div>
+            <div class="carousel-item">
+                <img src="Recursos/libro.jpg" alt="Chicago" class="d-block" style="width:100%">
+            </div>
+            <div class="carousel-item">
+                <img src="Recursos/Pensiones.jpeg" alt="New York" class="d-block" style="width:100%">
+            </div>
+        </div>
+
+        <!-- Left and right controls/icons -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+    </div>
+
+    <!-- /Carrusel -->
+
+
     <!-- Cuerpo -->
     <h1 class="w3-center titulo1">Inicio</h1>
-    
+
+
+    <h1 class="Tex-Serv">Servicios</h1>
+    <div class="cartas">
+        <div class="carta1">
+            <img src="Recursos/afore.jpeg">
+            <div class="Adentro-texto">
+                <h2>Afore</h2>
+                <p>Una Afore, o Administradora de Fondos para el Retiro, es una institución financiera que se
+                    encarga de
+                    administrar los ahorros de los trabajadores para su jubilación.
+                <ul>
+                    <li>Los trabajadores, sus empleadores y el gobierno aportan dinero a la cuenta individual de la
+                        Afore.</li>
+                    <li>Al momento del retiro, el trabajador recibe el monto ahorrado en pensiones mensuales.</li>
+                    <li>La Afore invierte el dinero para que crezca.</li>
+                </ul>
+                </p>
+                <a href="Contacto.html">Conoce mas</a>
+            </div>
+        </div>
+        <div class="carta2">
+            <img src="Recursos/credito.jpeg">
+            <div class="Adentro-texto">
+                <h2>Credito</h2>
+                <p>Elige el crédito que más te convenga para cumplir tus propósitos, nosotros te apoyamos.
+                <ul>
+                    <li>Flexibilidad: Los créditos se otorgan desde los $5,000 hasta los $600,000*, en plazos de 12,
+                        18, 24, 30, 36, 42, 48, 54 y 60 meses.</li>
+                    <li>Tranquilidad: Este préstamo se hace con base en un programa avalado por la Dependencia que
+                        administra el pago de la pensión, ofreciendo pagos fijos durante toda la vida del crédito.
+                    </li>
+                    <li>Comodidad: El pago lo descuenta la Dependencia correspondiente directamente de la pensión.
+                    </li>
+                    <li>Seguridad: Cuenta con un Seguro de Vida con cargo al Banco (para los clientes del producto
+                        Crédito Pensionados).</li>
+                    <li>Sin aval o garantías: No requiere aval o garantías.</li>
+                </ul>
+                </p>
+                <a href="Contacto.html">Conoce mas</a>
+            </div>
+        </div>
+        <div class="carta3">
+            <img src="Recursos/Pensiones.jpeg">
+            <div class="Adentro-texto">
+                <h2>Pensiones</h2>
+                <p>Nuestra labor profesional consiste en asesorar a los trabajadores de los institutos de
+                    Seguridad Social
+                    IMSS e ISSSTE en la planeación de su retiro de su vida laboral.
+                <ul>
+                    <li>Realizamos un análisis de su situación pensionaria y le brindamos toda la información de
+                        los derechos que le otorga el sistema de seguridad social al que pertenece; incrementar
+                        el monto de su pensión al máximo es nuestro principal objetivo.</li>
+                    <li>Lo ayudamos a integrar su expediente y corregir inconsistencias en sus datos de
+                        registro.
+                    </li>
+                    <li>Analizamos los conflictos en materia jurídica para llevarlos ante la autoridad
+                        competente y dar inicio a la acción judicial requerida.
+                    </li>
+                </ul>
+                </p>
+                <a href="Contacto.html">Conoce mas</a>
+            </div>
+        </div>
+        <div class="carta4">
+            <img src="Recursos/FondoRetiro.jpeg">
+            <div class="Adentro-texto">
+                <h2>Plan Personal de Retiro (PPR)</h2>
+                <p>NUn Plan Personal de Retiro (PPR) es un esquema de ahorro diseñado para ayudarte a construir un
+                    fondo
+                    para tu retiro, con flexibilidad y beneficios fiscales.
+                <ul>
+                    <li>Flexibilidad: Aportaciones flexibles y adicionales, con plazos de hasta 25 años.</li>
+                    <li>Desempeño: Beneficios fiscales, acceso a 15 portafolios de inversión y bono del 100% en el
+                        primer año.</li>
+                    <li>Liquidez: Retiros y préstamos disponibles.</li>
+                    <li>Seguridad: Respaldo de Grupo Allianz, uno de los mayores administradores de activos a nivel
+                        mundial.</li>
+                </ul>
+                </p>
+                <a href="Contacto.html">Conoce mas</a>
+            </div>
+        </div>
+        <div class="carta5">
+            <img src="Recursos/Seguro.jpeg">
+            <div class="Adentro-texto">
+                <h2>Seguros</h2>
+                <p>Protege a tu familia y asegura tu futuro con nuestras opciones de seguros. En Allianz,
+                    te ofrecemos experiencia, seguridad y solidez financiera.
+                <ul>
+                    <li>¿Qué pasaría en caso de que fallecieras de forma inesperada?</li>
+                    <li>¿Podría tu familia mantener su nivel de vida actual?</li>
+                    <li>¿Estarían cubiertos tus compromisos financieros?</li>
+                    <li>¿Habría dinero para la educación de tus hijos?</li>
+                    <li>¿Qué pasaría en caso de invalidez total?</li>
+                    <li>¿Podrías mantener tu nivel de vida actual?</li>
+                    <li>¿Serían suficientes tus ahorros para cubrir los gastos adicionales?</li>
+                </ul>
+                </p>
+                <a href="Contacto.html">Conoce mas</a>
+            </div>
+        </div>
+    </div>
+
+
+
 
     <!-- /Cuerpo -->
 
     <!-- Footer -->
 
-    <div class="w3-row fot w3-center">
-        <div class="w3-col s12 m4 l4">
+    <div class="w3-row fot w3-center w3-text-white">
+        <div class="w3-col s12 m4 l4 ">
             <h2>Legales</h2>
-            <p><a href="">Aviso de Privacidad</a></p>
-            <p><a href="">Terminos de Uso</a></p>
+            <p><a href="" class="w3-text-white">Aviso de Privacidad</a></p>
+            <p><a href="" class="w3-text-white">Terminos de Uso</a></p>
         </div>
         <div class="w3-col s12 m4 l4">
             <h2>Redes Social</h2>
-            <p><a href="">Aviso de Privacidad</a></p>
-            <p><a href="">Terminos de Uso</a></p>
+            <p><a href="" class="w3-text-white">Aviso de Privacidad</a></p>
+            <p><a href="" class="w3-text-white">Terminos de Uso</a></p>
         </div>
         <div class="w3-col s12 m4 l4">
             <h2>Ayuda</h2>
