--- a/nosotros.html
+++ b/nosotros.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Futuro Seguro</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
@@ -26,7 +27,7 @@
         </div>
         <div class="w3-col s12 m3">
             <a href="" class="w3-button w3-mobile  brnb  w3-hover-border-black">
-                <i class='fas fa-user-alt'></i><br>Iniciar Sesion </a>
+                <i class='fas fa-user-alt w3-xxlarge'></i><br>Iniciar Sesion </a>
         </div>
     </div>
 
@@ -53,24 +54,24 @@
     <br>
     <div class="w3-row">
         <div class="w3-col s12 m6 l6">
-                <div class="w3-container ns-con">
-                    <h2 class="tn">Vision</h2>
-                    <p>Ser la plataforma lider en Mexico en decuacion finanicera y gestion personalizada de
-                        ahorro, pensiones y segurso, empoderado a millones de personas para tomar decisiones
-                        inteligentes que aseguren su bienestar economica presente y futuro.
-                    </p>
-                </div>
+            <div class="w3-container ns-con">
+                <h2 class="tn">Vision</h2>
+                <p>Ser la plataforma lider en Mexico en decuacion finanicera y gestion personalizada de
+                    ahorro, pensiones y segurso, empoderado a millones de personas para tomar decisiones
+                    inteligentes que aseguren su bienestar economica presente y futuro.
+                </p>
+            </div>
         </div>
         <div class="w3-col s12 m6 l6 ">
-            
-                <div class="w3-container ns-con">
-                    <h2 class="tn">Mision</h2>
-                    <p>
-                        Simplicar y centralizar la gestion financiera de los mexicanos mediante tecnologia
-                        intuitiva e inteligente, ofreciendo herramientas accesibles, asesoramiento
-                        transparente y solucion personalizadas para cada etapa de la vida.
-                    </p>
-                </div>
+
+            <div class="w3-container ns-con">
+                <h2 class="tn">Mision</h2>
+                <p>
+                    Simplicar y centralizar la gestion financiera de los mexicanos mediante tecnologia
+                    intuitiva e inteligente, ofreciendo herramientas accesibles, asesoramiento
+                    transparente y solucion personalizadas para cada etapa de la vida.
+                </p>
+            </div>
         </div>
     </div>
     <br>
@@ -105,7 +106,7 @@
             <div class="w3-col s6 m3 l3 pd">
                 <div class="w3-card cd-bg">
                     <div class="im im4">
-                        
+
                     </div>
                     <h3 class="tl-cd">Victor D.R.R</h3>
                 </div>
@@ -114,7 +115,9 @@
     </div>
 
 
-
+    <a href="ia.html" class="fab-float w3-button w3-round-large w3-black">
+        <i class="fas fa-robot"></i>
+    </a>
 
 
     <!-- /Cuerpo -->
