--- a/pensionesblog.html
+++ b/pensionesblog.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Futuro Seguro</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="Style/Servicios.css">
@@ -27,7 +28,7 @@
         </div>
         <div class="w3-col s12 m3">
             <a href="" class="w3-button w3-mobile  brnb  w3-hover-border-black">
-                <i class='fas fa-user-alt'></i><br>Iniciar Sesion </a>
+                <i class='fas fa-user-alt w3-xxlarge'></i><br>Iniciar Sesion </a>
         </div>
     </div>
 
@@ -42,7 +43,7 @@
     <!-- /Barra de Navegacion -->
 
     <!-- Cuerpo -->
-     <br><br>
+    <br><br>
     <h1 class="w3-center w3-jumbo">Pensiones</h1>
     <div class="w3-row">
         <div class="w3-col s12 m4 l3">
@@ -51,7 +52,7 @@
                     <li><a href="#que-es">¿Qué es una pensión?</a></li>
                     <li><a href="#tipos">Tipos de pensiones</a></li>
                     <li><a href="#sistemas">Sistemas de pensiones</a></li>
-                    <li><a href="#reforma">Reformas y desafíos actuales</a></li>
+                    <li><a href="#requ">Requisitos</a></li>
                     <li><a href="#conclusion">Conclusión</a></li>
                 </ul>
             </div>
@@ -61,15 +62,30 @@
         <div class="w3-col s12 m8 l9 contenido">
             <section id="que-es">
                 <h2>¿Qué es una pensión?</h2>
-                <p>Una pensión es una prestación económica que se otorga regularmente a una persona, comúnmente cuando
-                    llega a la etapa de jubilación. Su propósito es garantizar un ingreso estable para cubrir
-                    necesidades básicas tras dejar de trabajar.</p>
-                <p>Este sistema es crucial tanto para los adultos mayores como para los jóvenes, ya que permite
-                    planificar el futuro financiero y mantener la calidad de vida incluso después del retiro.</p>
-                    <div class="w3-container w3-center">
-                        <img src="Recursos/P1.jpg" class="w3-image ">
-                    </div>
-                
+                <p>Una pensión es un ingreso periódico, generalmente mensual, que recibe una persona como forma de
+                    sustento, normalmente después de haber cumplido ciertos requisitos de edad, tiempo de trabajo o
+                    condiciones especiales, como una discapacidad o el fallecimiento de un familiar cercano. Las
+                    pensiones forman parte del sistema de seguridad social en la mayoría de los países, y su objetivo
+                    principal es garantizar la estabilidad económica de las personas en las etapas en que ya no pueden
+                    generar ingresos por sí mismas.</p>
+                <p>Las pensiones no se limitan solo a la vejez. También pueden otorgarse en situaciones como:
+
+                    Incapacidad permanente para trabajar (por enfermedad o accidente).
+
+                    Fallecimiento de un trabajador asegurado (para sus dependientes).
+
+                    Situaciones especiales como cuidado de hijos discapacitados o asistencia social.
+
+                    Hay dos grandes enfoques desde los que se puede financiar una pensión:
+
+                    De forma contributiva, cuando el beneficiario ha aportado dinero durante su vida laboral.
+
+                    De forma no contributiva, cuando el Estado otorga una pensión a personas en situación vulnerable que
+                    no han podido cotizar.</p>
+                <div class="w3-container w3-center">
+                    <img src="Recursos/P1.jpg" class="w3-image ">
+                </div>
+
             </section>
 
             <section id="tipos">
@@ -77,18 +93,27 @@
                 <p>Existen diferentes tipos de pensiones que se adaptan a distintas circunstancias personales y
                     laborales. Es importante conocerlas desde joven para prepararse con anticipación.</p>
                 <ul>
-                    <li><strong>Pensión de jubilación:</strong> Otorgada a quienes han alcanzado la edad de retiro y han
-                        cotizado lo suficiente.</li>
-                    <li><strong>Pensión por invalidez:</strong> Para quienes, por enfermedad o accidente, no pueden
-                        seguir trabajando.</li>
-                    <li><strong>Pensión de viudez:</strong> Brindada al cónyuge sobreviviente tras el fallecimiento del
-                        trabajador o pensionado.</li>
-                    <li><strong>Pensión de orfandad:</strong> Para hijos menores o dependientes de un trabajador
-                        fallecido.</li>
+                    <li><strong>Pensión de jubilación:</strong>Es la más común. Se otorga cuando una persona alcanza la
+                        edad mínima establecida por ley (por ejemplo, 60, 65 o 67 años, dependiendo del país) y ha
+                        acumulado un número suficiente de años trabajados y cotizados a la seguridad social. En algunos
+                        sistemas, existe la jubilación anticipada (antes de la edad legal) o diferida (posterior), con
+                        ajustes en el monto recibido.</li>
+                    <li><strong>Pensión por invalidez:</strong> Esta pensión se entrega a personas que, debido a una
+                        enfermedad o accidente, pierden de forma total o parcial su capacidad para trabajar. El grado de
+                        discapacidad y el tiempo cotizado influyen directamente en el acceso y en la cantidad que se
+                        recibe. Algunas legislaciones hacen distinción entre invalidez temporal o permanente.</li>
+                    <li><strong>Pensión de viudez:</strong>Otorgada a la pareja o cónyuge sobreviviente de una persona
+                        que fallece habiendo estado afiliada a un sistema de pensiones. En muchos países, también se
+                        extiende a parejas de hecho o excónyuges con derecho alimenticio. El objetivo es garantizar que
+                        la pareja sobreviviente no quede en desamparo económico.</li>
+                    <li><strong>Pensión de orfandad:</strong> Esta pensión está destinada a los hijos de un trabajador o
+                        pensionado fallecido. Suele cubrir hasta una edad determinada (usualmente entre 18 y 25 años) o
+                        mientras el beneficiario siga estudiando. En algunos casos también se extiende a hijos con
+                        discapacidad permanente.</li>
                 </ul>
                 <div class="w3-container w3-center">
-                        <img src="Recursos/P2.jpg" class="w3-image ">
-                    </div>
+                    <img src="Recursos/P2.jpg" class="w3-image ">
+                </div>
             </section>
 
             <section id="sistemas">
@@ -97,22 +122,47 @@
                     fondos que sostienen las pensiones. Comprenderlos ayuda a elegir opciones adecuadas y a participar
                     en su mejora.</p>
                 <ul>
-                    <li><strong>Reparto:</strong> Los trabajadores activos financian las pensiones de los jubilados
-                        actuales. Funciona con solidaridad entre generaciones.</li>
-                    <li><strong>Capitalización:</strong> Cada persona ahorra en una cuenta individual que se usará para
-                        su pensión. Es más común en países con sistemas privados.</li>
-                    <li><strong>Mixto:</strong> Combina características del reparto y de la capitalización.</li>
+                    <li><strong>Reparto:</strong> En este modelo, los trabajadores activos financian las pensiones de
+                        los actuales jubilados a través de sus cotizaciones a la seguridad social. Es el sistema más
+                        tradicional y ampliamente usado en Europa y América Latina. El mayor desafío de este sistema es
+                        que necesita un equilibrio entre trabajadores cotizantes y jubilados. Si la población envejece y
+                        hay menos nacimientos, el sistema puede entrar en crisis financiera.</li>
+                    <li><strong>Capitalización:</strong>En lugar de financiar a otros, cada trabajador ahorra en una
+                        cuenta individual durante su vida laboral. Al llegar a la edad de retiro, esos ahorros —más los
+                        rendimientos generados— son usados para pagar su pensión. Este sistema es común en países como
+                        Chile, México o Estados Unidos (con planes como las AFORE o el 401(k)). El problema principal es
+                        que, si los salarios fueron bajos o si hubo interrupciones en la cotización, el fondo acumulado
+                        puede ser insuficiente para una pensión digna.</li>
+                    <li><strong>Mixto:</strong> Combina los dos anteriores. Por un lado, hay un componente público que
+                        ofrece una pensión básica o mínima garantizada; por otro lado, se promueve el ahorro individual
+                        como complemento. Este sistema intenta equilibrar la sostenibilidad del sistema público con la
+                        responsabilidad individual.</li>
                 </ul>
                 <p>Los jóvenes deben comenzar a cotizar desde sus primeros empleos, mientras que los adultos mayores
                     deben conocer los requisitos para acceder a una pensión digna.</p>
                 <div class="w3-container w3-center">
-                        <img src="Recursos/P3.jpg" class="w3-image ">
-                    </div>
+                    <img src="Recursos/P3.jpg" class="w3-image ">
+                </div>
             </section>
 
             <section id="reforma">
-                <h2>Reformas y desafíos actuales</h2>
+                <h2>Requisitos para acceder a una pension</h2>
                 <p>Los sistemas de pensiones enfrentan desafíos importantes:</p>
+                <ul>
+                    <li><strong>Edad mínima:</strong>Generalmente, la edad legal de jubilación se sitúa entre los 60 y
+                        67 años. Sin embargo, algunos sistemas permiten jubilarse antes si se cumplen condiciones
+                        especiales, como trabajos en condiciones peligrosas o con largas carreras de cotización</li>
+                    <li><strong>Años de cotización:</strong> Es el período mínimo durante el cual una persona debe haber
+                        hecho aportes al sistema de pensiones. En muchos países, se exige un mínimo de 15 a 25 años
+                        cotizados. A mayor cantidad de años cotizados, mayor suele ser la pensión recibida.</li>
+                    <li><strong>Estar registrado/a en el sistema: </strong> Para acceder a una pensión, se debe haber
+                        estado inscrito en el sistema nacional de seguridad social o en un plan de pensiones privado.
+                        Esto implica que se hayan realizado contribuciones regulares, ya sea como trabajador dependiente
+                        o autónomo.</li>
+                    <li><strong>Documentación y trámites:</strong>El solicitante debe presentar documentos como su
+                        historial laboral, comprobantes de cotización, identificación oficial y, en caso de pensión por
+                        invalidez o viudedad, certificados médicos o de defunción, según corresponda.</li>
+                </ul>
                 <ul>
                     <li>El envejecimiento poblacional reduce el número de cotizantes y aumenta el de beneficiarios.</li>
                     <li>La informalidad laboral impide que muchas personas acumulen suficientes cotizaciones.</li>
@@ -121,8 +171,8 @@
                 <p>Es fundamental que tanto jóvenes como adultos mayores participen en el debate público sobre cómo
                     mejorar los sistemas de pensiones, pues esto afecta directamente su bienestar futuro.</p>
                 <div class="w3-container w3-center">
-                        <img src="Recursos/P4.jpg" class="w3-image ">
-                    </div>
+                    <img src="Recursos/P4.jpg" class="w3-image ">
+                </div>
             </section>
 
             <section id="conclusion">
@@ -141,6 +191,9 @@
     <br><br><br>
 
 
+    <a href="ia.html" class="fab-float w3-button w3-round-large w3-black">
+        <i class="fas fa-robot"></i>
+    </a>
 
 
     <!-- /Cuerpo -->
