--- a/simulador.html
+++ b/simulador.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Futuro Seguro</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
@@ -19,15 +20,15 @@
     <!--Barra de Navegacion-->
     <div class="w3-row br1">
         <div class="w3-col s12 m3">
-             <a href="index.html"><img src="Recursos/iconologo.png" alt="logo" class="w3-left icono"></a>
+            <a href="index.html"><img src="Recursos/iconologo.png" alt="logo" class="w3-left icono"></a>
         </div>
         <div class="w3-col s12 m6">
             <h2 class="tp">El dinero no compra la felicidad, pero el ahorro te da paz y seguridad</h2>
         </div>
         <div class="w3-col s12 m3">
             <a href="" class="w3-button w3-mobile  brnb  w3-hover-border-black">
-                <i class='fas fa-user-alt'></i><br>Iniciar Sesion </a>
-           <!-- <button onclick="myFunction('Recursos')" class="w3-button w3-block w3-center">
+                <i class='fas fa-user-alt w3-xxlarge'></i><br>Iniciar Sesion </a>
+            <!-- <button onclick="myFunction('Recursos')" class="w3-button w3-block w3-center">
                 <i class="w3-xlarge fa fa-bars"></i></button>-->
         </div>
     </div>
@@ -46,48 +47,50 @@
     <h2 class="w3-center titulo">Ahorro</h2>
     <div class="w3-container">
         <div class="w3-row pad w3-bottombar w3-border-black w3-padding-24">
-        <div class="w3-col s12 m6 l6 ">
-            <div class="w3-container txt">
-                <p>El ahorro es la parte del ingreso que no se gasta de manera inmediata,
-                    sino que se reserva o guarda para usarla en el futuro. <br>
-                    Consiste en posponer el consumo presente con el objetivo de contar con Recursos
-                    en caso de necesidad, alcanzar metas financieras o invertir.
-                </p>
-                <img src="Recursos/ahorro.jpg" alt="" class="w3-image">
+            <div class="w3-col s12 m6 l6 ">
+                <div class="w3-container txt">
+                    <p>El ahorro es la parte del ingreso que no se gasta de manera inmediata,
+                        sino que se reserva o guarda para usarla en el futuro. <br>
+                        Consiste en posponer el consumo presente con el objetivo de contar con Recursos
+                        en caso de necesidad, alcanzar metas financieras o invertir.
+                    </p>
+                    <img src="Recursos/ahorro.jpg" alt="" class="w3-image">
+                </div>
+
             </div>
 
-        </div>
+            <div class="w3-col s12 m6 l6">
+                <h3 class="titulo2">Empezamos con lo Basico</h3>
 
-        <div class="w3-col s12 m6 l6">
-            <h3 class="titulo2">Empezamos con lo Basico</h3>
+                <span>Ingresos Mensuales:</span>
+                <input type="text" class="w3-input w3-border w3-round-large"
+                    placeholder="Para estimar cuanto se puede ahorrar." required>
 
-            <span>Ingresos Mensuales:</span>
-            <input type="text" class="w3-input w3-border w3-round-large"
-                placeholder="Para estimar cuanto se puede ahorrar." required>
+                <span>Gastos Mensuales fijos y variables:</span>
+                <input type="text" class="w3-input w3-border w3-round-large"
+                    placeholder="Para calcular el ahorro neto posible." required>
 
-            <span>Gastos Mensuales fijos y variables:</span>
-            <input type="text" class="w3-input w3-border w3-round-large"
-                placeholder="Para calcular el ahorro neto posible." required>
+                <span>Objetivo de Ahorro:</span>
+                <input type="text" class="w3-input w3-border w3-round-large"
+                    placeholder='Ej. "Retiro en 20 añoz","Fondo de emergencia".' required>
 
-            <span>Objetivo de Ahorro:</span>
-            <input type="text" class="w3-input w3-border w3-round-large"
-                placeholder='Ej. "Retiro en 20 añoz","Fondo de emergencia".' required>
-
-            <span>Plazo de ahorro(en meses o años):</span>
-            <input type="text" class="w3-input w3-border w3-round-large"
-                placeholder="Define el horizonte de la simulacion.." required>
+                <span>Plazo de ahorro(en meses o años):</span>
+                <input type="text" class="w3-input w3-border w3-round-large"
+                    placeholder="Define el horizonte de la simulacion.." required>
                 <br>
-            <img src="Recursos/grafia.jpg" alt="" class="w3-image">
+                <img src="Recursos/grafia.jpg" alt="" class="w3-image">
+            </div>
         </div>
     </div>
-    </div>
-    
 
-    
+
+    <a href="ia.html" class="fab-float w3-button w3-round-large w3-black">
+        <i class="fas fa-robot"></i>
+    </a>
 
 
     <!-- /Cuerpo -->
-<br><br><br>
+    <br><br><br>
     <!-- Footer -->
 
     <div class="w3-row fot w3-center">
