--- a/cursos.html
+++ b/cursos.html
@@ -19,7 +19,7 @@
     <!--Barra de Navegacion-->
     <div class="w3-row br1">
         <div class="w3-col s12 m12 l3 ">
-             <a href="index.html"><img src="Recursos/iconologo.png" alt="logo" class="w3-left icono"></a>
+            <a href="index.html"><img src="Recursos/iconologo.png" alt="logo" class="w3-left icono"></a>
         </div>
         <div class="w3-col s12 m8 l6">
             <h2 class="tp">El dinero no compra la felicidad, pero el ahorro te da paz y seguridad</h2>
@@ -103,6 +103,10 @@
         <div class="w3-col s12 m6 l9 w3-center">
             <div class="w3-container">
                 <img src="Recursos/imgcurso.png" alt="Imagen de Curso" class="w3-image ">
+                <iframe style="width: 100%; height: 800px;" src="https://www.youtube.com/embed/L-LalfK0CYY?si=6BonlXrGA4QQCN14"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p class="txt w3-justify">"¿Alguna vez te has preguntado porque algunas personas logran sus metas
                     financieras y otras viven con estres por el dinero?
                     En este video, analizamos los beneficios clave de manejar tus finanzas con inteligecia: desde evitar
@@ -118,7 +122,7 @@
     <div class="w3-container">
         <a href="#" class="w3-btn w3-round-large w3-right w3-teal w3-margin">Siguiente Video</a>
     </div>
-    
+
 
     <!-- /Cuerpo -->
     <br><br><br>
