--- a/cursos.html
+++ b/cursos.html
@@ -102,7 +102,7 @@
         </div>
         <div class="w3-col s12 m6 l9 w3-center">
             <div class="w3-container">
-                <img src="Recursos/imgcurso.png" alt="Imagen de Curso" class="w3-image ">
+                <!-- <img src="Recursos/imgcurso.png" alt="Imagen de Curso" class="w3-image "> -->
                 <iframe style="width: 100%; height: 800px;" src="https://www.youtube.com/embed/L-LalfK0CYY?si=6BonlXrGA4QQCN14"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
